2tier/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /echo-fe
        backend:
          service:
            name: frontend
            port:
              number: 80
